[package]
name = "unsized-pin-list"
version = "0.1.0"
edition = "2021"
description = "A safe `Pin`-based intrusive doubly linked list for storing unsized data"
repository = "https://github.com/conradludgate/unsized-pin-list.rs"
license = "MIT"
keywords = ["PinList", "Unsize"]
categories = ["data-structures", "no-std"]

[features]
alloc = []
std = ["alloc"]

[dependencies]
pin-project-lite = "0.2.9"
pinned-aliasable = "0.1.3"

[dev-dependencies]
pin-utils = "0.1.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_nightly"]
