[package]
name = "pin-queue"
version = "0.1.0"
edition = "2021"
description = "A safe `Pin`-based intrusive linked list queue"
repository = "https://github.com/conradludgate/unsized-pin-list.rs"
license = "MIT"
keywords = ["PinQueue"]
categories = ["data-structures", "no-std"]

[features]
default = ["std"]
alloc = []
std = ["alloc"]

[dependencies]
pin-project-lite = "0.2.9"
pinned-aliasable = "0.1.3"

[dev-dependencies]
pin-utils = "0.1.0"
once_cell = "1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc_nightly"]
