[package]
name = "pin-queue"
version = "0.1.0"
edition = "2021"
description = "A safe `Pin`-based intrusive linked list queue"
repository = "https://github.com/conradludgate/unsized-pin-list.rs"
license = "MIT"
keywords = ["PinQueue"]
categories = ["data-structures", "no-std"]

[dependencies]

[dev-dependencies]
pin-project-lite = "0.2"

